--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ replay_pid*
 java-anatomia-classes/.vscode/settings.json
 variables-types/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
+/.metadata/
