--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "trilha-java-basico_34f5efdc"
+        },
+        {
+            "type": "java",
+            "name": "Iphone",
+            "request": "launch",
+            "mainClass": "Iphone",
+            "projectName": "trilha-java-basico_34f5efdc"
+        },
+        {
+            "type": "java",
             "name": "MyFirstClass",
             "request": "launch",
             "mainClass": "MyFirstClass",
